2023-07-08  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* mktextfm.c: remove an unused variable.

2020-01-31  Akira Kakuto  <kakuto@w32tex.org>

	* mktextfm.c: if envvar MF_MODE_EXTRA_INFO is set, include the
	codingscheme and other Xerox-world info in the .tfm; works
	with modes.mf 4.0 and later.

2019-02-20  Akira Kakuto  <kakuto@w32tex.org>

	* mktexpk.c: Remove unused definitions.
	* mktexlsr.c, matextfm.c, mktexupdmain.c: Avoid buffer overflow.

2017-06-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mktexfmt.c: Use fmtutil-user for consistency with other platforms.

2017-06-04  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* mktexfmt.c: Adapt to the new fmtutil.pl in TeX Live.

2016-04-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* All *.c, *.h files: Copyright year 2016.

2015-06-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dirutil.h, getdestdir.h, mktexupd.h (removed): Merged ...
	* mktex.h (new): ... into this and define normalize().
	* mkpaths.c (new): Define mkpaths() to handle TEXMFDBS.
	* getdestdir.c, mktexpk.c, mktexupdmain.c: Use normalize().
	* mktexlsr.c: Use normalize() and mkpaths().
	* mktexupd.c: Use mkpaths().

2015-06-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (AM_CPPFLAGS): WEB2C_KPSE_VERSION => WEB2CVERSION.
	* dirutil.[ch], getdestdir.h, mktexupd.h: Add W32TeX Copyright.
	* getdestdir.c, mktexfmt.c, mktexlsr.c, mktexmf.c, mktexupd.c,
	mktexupdmain.c: Sync with W32TeX.
	* mktexpk.c, mktextfm.c: Sync with W32TeX.
	Use KPSEVERSION and WEB2CVERSION instead of WEB2C_KPSE_VERSION.

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (bin_PROGRAMS): Drop fmtutil, now a perl script.
	* fmtutil.c: Removed.

2014-07-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mktexfmt.c, mktexpk.c, mktextfm.c: Replace the deprecated
	spawnvp() by _spawnvp(), they differ for 64-bit MinGW.

2012-12-08  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* getdestdir.c: Correct return value of getdestdir().
